--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.0.0",
     "eslint-config-civicsource": "^6.1.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "3.1.11",
+    "webpack-dev-server": "3.1.11"
   },
   "babel": {
     "presets": [
